# AutoPT

./: .gitignore  README.md  README_EN.md  __init__.py  pyproject.toml
analysis/: __init__.py  cli.py  failures.py  history.py  loader.py  plotting.py  summary.py
benchmark/: __init__.py  loader.py  models.py
cli/: __init__.py  main.py
config/: __init__.py  loader.py  schema.py
configs/: config.example.yml
models/: __init__.py  providers.py  registry.py
prompts/: __init__.py  layers.py  optimizer.py  registry.py  templates.py
runner/: __init__.py  experiment_runner.py  result_schema.py  result_writer.py  task_runner.py
tools/: __init__.py  registry.py  terminal.py  web.py
workflow/: __init__.py  builder.py  nodes.py  parser.py  router.py  state.py
