[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopt"
version = "0.1.0"
description = "Unified AutoPT mainline workflow, experiment runner, and analysis tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-openai>=0.3,<0.4",
    "langchain-nvidia-ai-endpoints>=0.3,<0.4",
    "langchain-together>=0.3,<0.4",
    "langgraph>=0.3,<0.4",
    "nest-asyncio>=1.6,<2.0",
    "paramiko>=3.4,<4.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
analysis = [
    "matplotlib>=3.8,<4.0",
    "numpy>=1.26,<3.0",
]
dev = [
    "build>=1.2,<2.0",
    "pytest>=8.0,<9.0",
]

[project.scripts]
autopt = "autopt.cli.main:main"

[tool.setuptools]
package-dir = {autopt = "."}
packages = [
    "autopt",
    "autopt.analysis",
    "autopt.benchmark",
    "autopt.cli",
    "autopt.config",
    "autopt.models",
    "autopt.prompts",
    "autopt.runner",
    "autopt.tools",
    "autopt.workflow",
]
